# sf-std

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt
include/: dynamic.h  export.h  sanitizers.h  str.h
include/sf/: dynamic.h  export.h  fs.h  keyboard.h  math.h  numerics.h  result.h  str.h
include/sf/containers/: buffer.h  expected.h  map.h  vec.h
src/: buffer.c  dynamic.c  fs.c  math.c  numerics.c  str.c
tests/: buffer.c  fs.c  map.c  str.c  vec.c
